syntax = "proto3";

package benchmark;

service BenchmarkService {
    rpc SendData (DataStream) returns (Response);
}

message DataStream {
    bytes data = 1;
}

message Response {
    bool success = 1;
}
